src/test/ui/associated-const/associated-const-generic-obligations.stderr
error[E0326]: implemented const `FROM` has an incompatible type for trait
  --> $DIR/associated-const-generic-obligations.rs:14:17
   |
LL |     const FROM: Self::Out;
   |                 --------- type in trait
...
LL |     const FROM: &'static str = "foo";
   |                 ^^^^^^^^^^^^ expected associated type, found `&str`
   |
   = note: expected associated type `<T as Foo>::Out`
                    found reference `&'static str`
   = note: consider constraining the associated type `<T as Foo>::Out` to `&'static str` or calling a method that returns `<T as Foo>::Out`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error: aborting due to previous error

For more information about this error, try `rustc --explain E0326`.
